# simd-benchmarks

numerical-integration/: CMakeLists.txt  scalar.cpp  scalar_avx512.cpp  scalar_no_avx.cpp  test_main.cpp  vectorized.cpp
